# ChallengeAndResponse

./: .gitignore  README.md  pyproject.toml
scripts/: generate_keys.sh  install_uv.sh  local_env_setup.sh  write_keys_and_start_test.sh
src/keys_gen/: generate_keys.py
src/keys_validator/: dut.py
src/keys_writer/: write_keys.py
