[project]
name = "challenge-response-authentication"
version = "1.0.0"
description = "A sample code showing how to do Challenge and Response Authentication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pycryptodome>=3.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "src/keys_gen/**",
    "src/keys_validator/**",
    "src/keys_writer/**",
    "*.py",
]
